chore: add sonarlint github Actions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,5 @@
 		"uncovered": "rgba(255,99,71, 0.2)",
 		"partially-covered": "rgba(255,215,0, 0.2)"
 	},
-	"cSpell.words": ["eticket"]
+	"cSpell.words": ["eticket", "sonarcloud"]
 }
