--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,22 +9,6 @@ on:
   workflow_dispatch:
 
 jobs:
-  sonarcloud:
-    name: SonarCloud
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0 
-      - name: Install dependencies
-        run: yarn
-      - name: Test and coverage
-        run: yarn jest --coverage
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN:  ${{ secrets.SONAR_TOKEN }}
   build:
     permissions:
       checks: write
@@ -39,8 +23,16 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: yarn install
-      - run: yarn test:ci
+      - name: Install dependencies
+        run: yarn
+      
+      - name: Test and coverage
+        run: yarn jest --coverage
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
 
       - name: Tests ✅
         if: ${{ success() }}
@@ -69,15 +61,15 @@ jobs:
             "description": "Tests failed",
             "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
           }'
-  
+
   DeployDev:
     name: Deploy to Dev
     if: github.event_name == 'pull_request'
-    needs: [sonarcloud, build]
+    needs: [build]
     runs-on: ubuntu-latest
-    environment: 
+    environment:
       name: Develop
       url: develop.up.railway.app
     steps:
-      - name: Deploy 
+      - name: Deploy
         run: echo I am deploying
