--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "nodemon --exec yarn restart",
     "debug": "rimraf dist && yarn run build && ndb dist/index.js",
     "restart": "rimraf dist && yarn run build && yarn run start",
-    "test": "jest --bail --detectOpenHandles --passWithNoTests --runInBand --no-cache",
+    "test": "jest --bail --detectOpenHandles --passWithNoTests --runInBand --no-cache --forceExit",
+    "test:unit": "jest --watchAll --coverage --verbose --silent --runInBand --env node",
     "test:ci": "yarn test --coverage --silent",
     "prettier:check": "prettier --check .",
     "prettier:fix": "prettier --write .",
@@ -34,6 +35,7 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^29.3.1",
     "commitizen": "^4.3.0",
+    "cspell": "^6.23.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
@@ -46,6 +48,7 @@
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "puppeteer": "^19.2.2",
+    "puppeteer-to-istanbul": "^1.4.0",
     "rimraf": "^4.1.1"
   },
   "dependencies": {
