--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "jest --bail --detectOpenHandles --passWithNoTests --runInBand --no-cache --forceExit",
     "test:unit": "jest --watchAll --coverage --verbose --silent --runInBand --env node",
     "test:ci": "yarn test --coverage --silent",
+    "format": "yarn run prettier:fix && npm run lint:fix",
     "prettier:check": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "lint:check": "eslint .",
@@ -37,8 +38,8 @@
     "commitizen": "^4.3.0",
     "cspell": "^6.23.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.27.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
@@ -46,15 +47,21 @@
     "jest-puppeteer": "^6.1.1",
     "lint-staged": "^13.1.0",
     "nodemon": "^2.0.20",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.4",
     "puppeteer": "^19.2.2",
     "puppeteer-to-istanbul": "^1.4.0",
     "rimraf": "^4.1.1"
   },
   "dependencies": {
+    "@sentry/node": "^7.37.2",
+    "aws-sdk": "^2.1332.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
+    "mongodb": "^5.0.1",
+    "mongodb-memory-server": "^8.11.4",
+    "mongoose": "^6.9.1",
     "morgan": "^1.10.0",
     "winston": "^3.8.2",
     "yarn": "^1.22.19"
