--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "rimraf": "^4.1.1"
   },
   "dependencies": {
+    "app-root-path": "^3.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
