--- a/package.json
+++ b/package.json
@@ -49,10 +49,11 @@
     "eslint-import-resolver-babel-module": "^5.3.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
+    "git-commit-msg-linter": "^4.10.0",
     "husky": "^8.0.3",
     "jest": "^29.3.1",
     "jest-puppeteer": "^6.1.1",
-    "lint-staged": "^13.1.0",
+    "lint-staged": "^13.2.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "puppeteer": "^19.2.2",
