chore: ensuring gts (eslint), prettier and configure lint-staged

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,26 @@
 {
-  "extends": "./node_modules/gts/"
+  "extends": "./node_modules/gts/",
+   "rules": {
+    // @typescript-eslint
+    "@typescript-eslint/no-namespace": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    // import
+    "import/no-duplicates": "off",
+    // prettier/prettier
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
+  },
+  "settings": {
+    "import/resolver": {
+      "typescript": {}
+    },
+    "node": {
+      "allowModules": [
+      ]
+    }
+  }
 }
