--- a/lefthook.yml
+++ b/lefthook.yml
@@ -2,3 +2,8 @@ commit-msg:
   commands:
     commitlint:
       run: npx commitlint --edit
+pre-commit:
+  parallel: true
+  commands:
+    lint-staged:
+      run: npx lint-staged
