--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --passWithNoTests --runInBand --detectOpenHandles --silent --noStackTrace",
+    "test:v": "jest --passWithNoTests --runInBand --detectOpenHandles --verbose",
+    "test:w": "npm run test -- --watch",
+    "test:u": "npm run test -- -c jest.unit.config.ts",
+    "test:i": "npm run test -- -c jest.integration.config.ts",
+    "test:ci": "npm run test -- --coverage",
+    "test:ci:u": "npm run test:u -- --coverage",
+    "test:ci:i": "npm run test:i -- --coverage",
+    "test:staged": "npm test -- --findRelatedTests",
     "lint": "eslint . --fix",
     "clean": "gts clean",
     "compile": "tsc",
@@ -21,13 +29,21 @@
   "devDependencies": {
     "@commitlint/cli": "18.4.3",
     "@commitlint/config-conventional": "18.4.3",
+    "@jest/types": "29.6.3",
+    "@types/jest": "29.5.11",
     "@types/node": "20.8.2",
+    "@types/supertest": "6.0.0",
     "commitlint": "18.4.3",
     "cz-conventional-changelog": "3.3.0",
     "dotenv": "16.3.1",
     "gts": "^5.2.0",
+    "jest": "29.7.0",
+    "jest-environment-node": "29.7.0",
     "lefthook": "1.5.5",
     "lint-staged": "15.2.0",
+    "supertest": "6.3.3",
+    "ts-jest": "29.1.1",
+    "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
     "typescript": "~5.2.0"
   }
