--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "compile": "esbuild src --outfile=.tmp/dist/index.js --bundle --minify --platform=node --tree-shaking=true",
     "test": "jest --passWithNoTests --runInBand --detectOpenHandles --silent --noStackTrace",
     "test:v": "jest --passWithNoTests --runInBand --detectOpenHandles --verbose",
     "test:w": "npm run test -- --watch",
@@ -15,7 +16,6 @@
     "test:staged": "npm test -- --findRelatedTests",
     "lint": "eslint . --fix",
     "clean": "gts clean",
-    "compile": "tsc",
     "fix": "gts fix",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
@@ -36,11 +36,13 @@
     "commitlint": "18.4.3",
     "cz-conventional-changelog": "3.3.0",
     "dotenv": "16.3.1",
+    "esbuild": "0.19.10",
     "gts": "^5.2.0",
     "jest": "29.7.0",
     "jest-environment-node": "29.7.0",
     "lefthook": "1.5.5",
     "lint-staged": "15.2.0",
+    "rimraf": "5.0.5",
     "supertest": "6.3.3",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.2",
