--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "guide-more-collector",
+  "name": "eticket",
   "version": "1.0.0",
-  "description": "scrap voarfacil.net/${code} site",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "preci": "rm -rf node_modules",
-    "ci": "yarn install --frozen-lockfile",
+    "ci": "pnpm install --frozen-lockfile",
     "build": "babel src --out-dir dist",
     "start": "node dist/index.js",
-    "dev": "nodemon --exec yarn restart",
-    "debug": "rimraf dist && yarn run build && ndb dist/index.js",
-    "restart": "rimraf dist && yarn run build && yarn run start",
-    "test": "jest",
-    "test:ci": "yarn test --coverage --silent",
+    "dev": "nodemon --exec pnpm restart",
+    "debug": "rimraf dist && pnpm run build && ndb dist/index.js",
+    "restart": "rimraf dist && pnpm run build && pnpm run start",
+    "test": "jest --passWithNoTests",
+    "test:ci": "pnpm test --coverage --silent",
+    "test:unit": "pnpm test -- --watch -c jest-unit-config.js",
+    "test:integration": "pnpm test -- --watch -c jest-integration-config.js",
     "prettier:check": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "lint:check": "eslint .",
@@ -22,9 +24,9 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
-      "yarn prettier",
-      "yarn lint:fix",
-      "yarn test",
+      "pnpm prettier",
+      "pnpm lint:fix",
+      "pnpm test",
       "git add"
     ]
   },
@@ -36,6 +38,8 @@
     "@babel/core": "^7.20.12",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-transform-class-properties": "^7.23.3",
+    "@babel/plugin-transform-object-rest-spread": "^7.23.4",
     "@babel/preset-env": "^7.21.4",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
@@ -52,11 +56,12 @@
     "git-commit-msg-linter": "^4.10.0",
     "husky": "^8.0.3",
     "jest": "^29.3.1",
-    "jest-puppeteer": "^6.1.1",
+    "jest-puppeteer": "^6.2.0",
     "lint-staged": "^13.2.1",
     "nodemon": "^2.0.20",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.8",
     "puppeteer": "^19.2.2",
+    "puppeteer-core": "^21.6.1",
     "rimraf": "^4.1.1"
   },
   "dependencies": {
