--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ci": "pnpm install --frozen-lockfile",
     "build": "babel src --out-dir dist",
     "start": "node dist/index.js",
-    "dev": "nodemon --exec pnpm restart",
+    "dev": "nodemon --exec pnpm run restart",
     "debug": "rimraf dist && pnpm run build && ndb dist/index.js",
     "restart": "rimraf dist && pnpm run build && pnpm run start",
     "test": "jest --passWithNoTests",
@@ -60,7 +60,7 @@
     "lint-staged": "^13.2.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.8",
-    "puppeteer": "^19.2.2",
+    "puppeteer": "^19.11.1",
     "puppeteer-core": "^21.6.1",
     "rimraf": "^4.1.1"
   },
@@ -70,8 +70,7 @@
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "morgan": "^1.10.0",
-    "winston": "^3.8.2",
-    "yarn": "^1.22.19"
+    "winston": "^3.8.2"
   },
   "config": {
     "commitizen": {
