--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "morgan": "^1.10.0",
+    "random-useragent": "^0.5.0",
     "winston": "^3.8.2"
   },
   "config": {
