--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,47 @@
-node_modules
+# build
 dist
-logs
-coverage
+
 .yarn/
+.idea/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# TS copile output
+dist/
+
+# Coverage directory
+coverage
+*.lcov
+
+# Dependency directories
+node_modules/
+
+# TypeScript v1 declaration files
+typings/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# dotenv environment variables file
+.env
+.env.test
+
+dev.db*
