--- a/package.json
+++ b/package.json
@@ -34,44 +34,45 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.20.7",
-    "@babel/core": "^7.20.12",
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.6",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/plugin-transform-class-properties": "^7.23.3",
     "@babel/plugin-transform-object-rest-spread": "^7.23.4",
-    "@babel/preset-env": "^7.21.4",
-    "@commitlint/cli": "^17.4.2",
-    "@commitlint/config-conventional": "^17.4.2",
+    "@babel/preset-env": "^7.23.6",
+    "@commitlint/cli": "^17.8.1",
+    "@commitlint/config-conventional": "^17.8.1",
     "babel-core": "^6.26.3",
-    "babel-jest": "^29.3.1",
+    "babel-jest": "^29.7.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.27.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-babel-module": "^5.3.2",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "git-commit-msg-linter": "^4.10.0",
+    "git-commit-msg-linter": "^4.11.1",
     "husky": "^8.0.3",
-    "jest": "^29.3.1",
+    "jest": "^29.7.0",
     "jest-puppeteer": "^6.2.0",
-    "lint-staged": "^13.2.1",
-    "nodemon": "^2.0.20",
+    "lint-staged": "^13.3.0",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "puppeteer": "^19.11.1",
     "puppeteer-core": "^21.6.1",
-    "rimraf": "^4.1.1"
+    "rimraf": "^4.4.1"
   },
   "dependencies": {
+    "@prisma/client": "^5.7.1",
     "app-root-path": "^3.1.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "helmet": "^6.0.1",
+    "helmet": "^6.2.0",
     "morgan": "^1.10.0",
     "random-useragent": "^0.5.0",
-    "winston": "^3.8.2"
+    "winston": "^3.11.0"
   },
   "config": {
     "commitizen": {
