--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -30,7 +30,7 @@ jobs:
         run: pnpm install
 
       - name: Test and coverage
-        run: pnpm jest -- --coverage --silent
+        run: pnpm test -- --coverage --silent
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
