--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,16 +2,237 @@
 	"files.autoSave": "afterDelay",
 	"jest.debugMode": true,
 	"jest.jestCommandLine": "npm run test --",
-	"jest.nodeEnv": { "PORT": "9800" },
+	"jest.nodeEnv": {
+		"PORT": "9800"
+	},
 	"jest.showCoverageOnLoad": true,
 	"jest.coverageFormatter": "GutterFormatter",
 	"jest.coverageColors": {
 		"uncovered": "rgba(255,99,71, 0.2)",
 		"partially-covered": "rgba(255,215,0, 0.2)"
 	},
-	"cSpell.words": ["eticket", "sonarcloud"],
-	"editor.fontSize": 15,
-	"editor.fontFamily": "Monaco",
+	"eslint.codeActionsOnSave.mode": "all",
+	"eslint.workingDirectories": [
+		{
+			"mode": "auto"
+		}
+	],
+
+	"[javascript]": {
+		"editor.formatOnSave": false,
+		"editor.codeActionsOnSave": {
+			"source.organizeImports": "explicit"
+		}
+	},
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
+	"editor.fontSize": 14,
 	"javascript.format.enable": true,
-	"javascript.suggest.autoImports": true
+	"emmet.syntaxProfiles": {
+		"javascript": "jsx"
+	},
+	"workbench.startupEditor": "newUntitledFile",
+	"javascript.suggest.autoImports": true,
+	"javascript.updateImportsOnFileMove.enabled": "always",
+	"editor.rulers": [80, 120],
+	"extensions.ignoreRecommendations": true,
+	"typescript.tsserver.log": "off",
+	"files.associations": {
+		".sequelizerc": "javascript",
+		".stylelintrc": "json",
+		"*.tsx": "typescriptreact",
+		".env.*": "dotenv",
+		".prettierrc": "json"
+	},
+	"screencastMode.onlyKeyboardShortcuts": true,
+	"cSpell.userWords": [
+		"bootcamp",
+		"chakra",
+		"checkin",
+		"checkins",
+		"clsx",
+		"Codegen",
+		"datadog",
+		"Datetime",
+		"dayjs",
+		"Dotenv",
+		"esbuild",
+		"fastify",
+		"Fastify",
+		"feedbackwidget",
+		"ffprobe",
+		"Hono",
+		"IUGU",
+		"jamjuree",
+		"jupiter",
+		"liveblocks",
+		"LIVEBLOCKS",
+		"middlewares",
+		"mixpanel",
+		"monaco",
+		"nestjs",
+		"omni",
+		"Omni",
+		"Onboarded",
+		"pallas",
+		"postgres",
+		"postgresql",
+		"prefetch",
+		"reactflow",
+		"roboto",
+		"rocketseat",
+		"rotion",
+		"rsxp",
+		"Sandpack",
+		"shiki",
+		"skylab",
+		"sqlite",
+		"supergraph",
+		"svgr",
+		"sympla",
+		"textblock",
+		"tiptap",
+		"trpc",
+		"TRPC",
+		"tsup",
+		"unfollow",
+		"Unfollow",
+		"unform",
+		"Unform",
+		"unmark",
+		"upsert",
+		"Usuario",
+		"WEBPUSH"
+	],
+	"editor.parameterHints.enabled": false,
+	"editor.renderLineHighlight": "gutter",
+	"cSpell.language": "en,pt",
+	"editor.lineHeight": 20,
+	"material-icon-theme.languages.associations": {
+		"dotenv": "tune"
+	},
+	"typescript.updateImportsOnFileMove.enabled": "never",
+	"material-icon-theme.files.associations": {
+		"tsconfig.json": "tune",
+		"*.webpack.js": "webpack",
+		"*.proto": "3d",
+		"ormconfig.json": "database"
+	},
+	"material-icon-theme.activeIconPack": "nest",
+	"editor.suggestSelection": "first",
+	"explorer.confirmDelete": false,
+	"gitlens.codeLens.recentChange.enabled": false,
+	"terminal.integrated.showExitAlert": false,
+	"[prisma]": {
+		"editor.formatOnSave": true
+	},
+	"typescript.suggest.autoImports": true,
+	"terminal.integrated.env.osx": {
+		"FIG_NEW_SESSION": "1"
+	},
+	"workbench.editor.labelFormat": "short",
+	"editor.fontLigatures": true,
+	"emmet.includeLanguages": {
+		"javascript": "javascriptreact"
+	},
+	"liveshare.featureSet": "insiders",
+	"material-icon-theme.folders.associations": {
+		"adapters": "contract",
+		"grpc": "pipe",
+		"kube": "kubernetes",
+		"main": "lib",
+		"websockets": "pipe",
+		"implementations": "core",
+		"protos": "pipe",
+		"entities": "class",
+		"kafka": "pipe",
+		"use-cases": "functions",
+		"migrations": "tools",
+		"schemas": "class",
+		"useCases": "functions",
+		"eslint-config": "tools",
+		"typeorm": "database",
+		"_shared": "shared",
+		"mappers": "meta",
+		"fakes": "mock",
+		"modules": "components",
+		"subscribers": "messages",
+		"domain": "class",
+		"protocols": "contract",
+		"infra": "app",
+		"view-models": "views",
+		"presentation": "template",
+		"dtos": "typescript",
+		"http": "container",
+		"providers": "include",
+		"factories": "class",
+		"repositories": "mappings"
+	},
+	"cSpell.enableFiletypes": [
+		"!asciidoc",
+		"!c",
+		"!cpp",
+		"!csharp",
+		"!go",
+		"!handlebars",
+		"!haskell",
+		"!jade",
+		"!java",
+		"!latex",
+		"!php",
+		"!pug",
+		"!python",
+		"!restructuredtext",
+		"!rust",
+		"!scala",
+		"!scss"
+	],
+	"editor.acceptSuggestionOnCommitCharacter": false,
+	"explorer.compactFolders": false,
+	"git.enableSmartCommit": true,
+	"editor.accessibilitySupport": "off",
+	"explorer.confirmDragAndDrop": false,
+	"terminal.integrated.fontSize": 14,
+	"terminal.integrated.fontFamily": "JetBrainsMono Nerd Font",
+	"editor.codeActionsOnSave": {
+		"source.fixAll.eslint": "explicit",
+		"source.addMissingImports": "explicit"
+	},
+	"eslint.validate": ["javascript", "javascriptreact", "graphql"],
+	"editor.semanticHighlighting.enabled": false,
+	"breadcrumbs.enabled": true,
+	"workbench.productIconTheme": "fluent-icons",
+	"editor.fontFamily": "JetBrains Mono",
+	"gitlens.codeLens.authors.enabled": false,
+	"editor.tabSize": 2,
+	"security.workspace.trust.untrustedFiles": "newWindow",
+	"files.exclude": {
+		"**/CVS": true,
+		"**/.DS_Store": true,
+		"**/.hg": true,
+		"**/.svn": true,
+		"**/.git": true
+		// "node_modules": true
+	},
+	"tabnine.experimentalAutoImports": true,
+	"gitlens.codeLens.enabled": false,
+	"workbench.iconTheme": "material-icon-theme",
+	"polacode.transparentBackground": true,
+	"polacode.target": "snippet",
+	"editor.minimap.enabled": false,
+	"update.mode": "start",
+	"terminal.integrated.gpuAcceleration": "off",
+	"terminal.integrated.defaultProfile.osx": "zsh",
+	"[jsonc]": {
+		"editor.defaultFormatter": "vscode.json-language-features"
+	},
+	"workbench.colorTheme": "Default Light Modern",
+	"liveServer.settings.donotShowInfoMsg": true,
+	"[json]": {
+		"editor.defaultFormatter": "vscode.json-language-features"
+	},
+	"window.commandCenter": true,
+	"git.openRepositoryInParentFolders": "always",
+	// "window.zoomLevel": 0,
+	"workbench.editor.empty.hint": "hidden",
+	"cSpell.words": ["ETICKET"]
 }
