--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,8 +2,8 @@
 	"compilerOptions": {
 		"baseUrl": "src",
 		"moduleResolution": "Node",
-		"target": "ES2020",
-		"module": "commonjs",
+		"target": "ES2022",
+		"module": "ES2022",
 		"allowSyntheticDefaultImports": true,
 		"skipLibCheck": true,
 		"typeRoots": ["node_modules/@types", "types"],
