--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
     "test:ci": "pnpm test -- --coverage --silent",
     "test:unit": "pnpm test -- --watch -c jest-unit-config.js",
     "test:integration": "pnpm test -- --watch -c jest-integration-config.js",
+    "prisma:generate": "prisma generate",
+    "prisma:generate:watch": "prisma generate --watch",
+    "prisma:migrate": "prisma migrate dev --skip-seed",
+    "prisma:seed": "prisma db seed",
+    "prisma:reset": "prisma migrate reset",
+    "prisma:studio": "prisma studio",
+    "prisma:format": "prisma format",
     "prettier:check": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "lint:check": "eslint .",
@@ -38,9 +45,10 @@
     "@babel/core": "^7.23.7",
     "@babel/plugin-transform-class-properties": "^7.23.3",
     "@babel/plugin-transform-object-rest-spread": "^7.23.4",
-    "@babel/preset-env": "^7.23.7",
+    "@babel/preset-env": "^7.23.8",
     "@commitlint/cli": "^17.8.1",
     "@commitlint/config-conventional": "^17.8.1",
+    "@prisma/client": "^5.8.0",
     "@types/jest": "^29.5.11",
     "babel-core": "^6.26.3",
     "babel-jest": "^29.7.0",
@@ -59,11 +67,11 @@
     "lint-staged": "^13.3.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
+    "prisma": "^5.8.0",
     "puppeteer": "^21.7.0",
     "rimraf": "^4.4.1"
   },
   "dependencies": {
-    "@prisma/client": "^5.7.1",
     "app-root-path": "^3.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
