--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,6 +6,7 @@ sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.projectName=fly-easy-eticket
 sonar.projectVersion=1.0
 
+sonar.exclusions=**/src/infra/puppeteer/**, **/src/main/**
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 #sonar.sources=.
 
