--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@babel/preset-env": "^7.23.8",
     "@commitlint/cli": "^17.8.1",
     "@commitlint/config-conventional": "^17.8.1",
+    "@prisma/client": "^5.8.1",
     "@types/jest": "^29.5.11",
     "babel-core": "^6.26.3",
     "babel-jest": "^29.7.0",
@@ -66,6 +67,7 @@
     "lint-staged": "^13.3.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
+    "prisma": "^5.8.1",
     "puppeteer": "^21.7.0",
     "rimraf": "^4.4.1"
   },
@@ -73,9 +75,12 @@
     "app-root-path": "^3.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fast-glob": "^3.3.2",
     "helmet": "^6.2.0",
     "morgan": "^1.10.0",
     "random-useragent": "^0.5.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "winston": "^3.11.0"
   },
   "config": {
